update image url

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ name: Thang Vo Duy
 description: Web Developer from pavement
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars2.githubusercontent.com/u/30712604?v=4&u=5de1082f73b1af312101d81deadcb04bda562e1e&s=400
-
+#avatar: https://avatars2.githubusercontent.com/u/30712604?v=4&u=5de1082f73b1af312101d81deadcb04bda562e1e&s=400
+avatar: https://raw.githubusercontent.com/voduythang/master/images/maylangthang.jpg
 #
 # Flags below are optional
 #
