update info again

--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/voduythang/master/images/maylangthang.
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: voduythang@gmail.com
   facebook:
   flickr:
   github: voduythang
   instagram:
-  linkedin:voduythang
+  linkedin: voduythang
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
