--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://raw.githubusercontent.com/voduythang/master/images/maylangthang.
 footer-links:
   dribbble:
   email: voduythang@gmail.com
-  facebook:
+  facebook: mlangthang
   flickr:
   github: voduythang
   instagram:
